--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Coming soon...</p>
+        <h1>hilary.js</h1>
+        <p>
+          hilary.js is a simple JavaScript IoC container. hilary's aim is to deliver low-ceremony dependency injection, to aid in decoupling JavaScript modules and testing. It's named after Hilary Page, who designed building blocks that later became known as Legos.
+        </p>
+        <p>
+          Check out our <a href="https://github.com/Acatar/hilaryjs">documentation</a>, or one of our demos: 
+          <a href="/hilary/gettingStarted/">getting started</a> or
+          <a href="/hilary/gettingStartedWithRequire/">getting started using AMD</a>
+        </p>
       </section>
     </div>
 
