--- a/hilary/gettingStarted/index.html
+++ b/hilary/gettingStarted/index.html
@@ -41,7 +41,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-		<p>hello, I'm Hilary => a simple JavaScript IoC container.</p>
+		<p>hello, I'm hilary => a simple JavaScript IoC container.</p>
 
 		<p>
 			In this example, we have a single Model View Controller structure that is tied together with a composition root.  We also mock jQuery ajax, to get data into the model, without going ot the server, to further display the uses of the IoC container.
