--- a/hilary/gettingStartedWithRequire/index.html
+++ b/hilary/gettingStartedWithRequire/index.html
@@ -41,7 +41,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-		<p>hello, I'm Hilary => a simple JavaScript IoC container.</p>
+		<p>hello, I'm hilary => a simple JavaScript IoC container.</p>
 
 		<p>
 			In this example, we use hilary with AMD (Asynchronous Module Definition): namely, require.js.
