adds source and cleaner startup

--- a/hilary/gettingStarted/index.html
+++ b/hilary/gettingStarted/index.html
@@ -44,7 +44,9 @@
 		<p>hello, I'm hilary => a simple JavaScript IoC container.</p>
 
 		<p>
-			In this example, we have a single Model View Controller structure that is tied together with a composition root.  We also mock jQuery ajax, to get data into the model, without going ot the server, to further display the uses of the IoC container.
+			In this example (check out the <a href="https://github.com/Acatar/acatar.github.io/tree/master/hilary/gettingStarted">
+			source</a>), we have a single Model View Controller structure that is tied together with a composition root.  We also 
+			mock jQuery ajax, to get data into the model, without going ot the server, to further display the uses of the IoC container.
 		</p>
 
 		<div class="example">
@@ -155,7 +157,9 @@ hilary.use([hilary, jQuery, ko], function(hilarysInnerContainer, hilary, $, ko) 
 	<script src="/hilary/gettingStarted/scripts/view.js"></script>
 	<script src="/hilary/gettingStarted/scripts/controller.js"></script>
 	<script src="/hilary/gettingStarted/scripts/mock-ajax.js"></script>
-
     <script src="/hilary/gettingStarted/scripts/compositionRoot.js"></script>
+    <script>
+    	example.load();
+    </script>    
   </body>
 </html>
