--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <a href="/hilary/gettingStarted/">getting started</a> or
           <a href="/hilary/gettingStartedWithRequire/">getting started using AMD</a>
         </p>
+        <p>There's also <a href="/hilary/patternInAmdWithoutHilary/">an example of the same patterns using AMD only</a>, with 
+        <a href="http://requirejs.org/">require.js</a></p>
       </section>
     </div>
 
